[package]
name = "rockbuild"
version = "0.1.0"
authors = ["niehy <nieheyu@sunmi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.40"
glob = "0.3.0"
regex = "1.3.1"
lazy_static = "1.4.0"
num_cpus = "1.10.1"
